tests/mypy/mypy_wrap_function_wrapper_t6.out
tests/mypy/mypy_wrap_function_wrapper_t6.py:21: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_wrap_function_wrapper_t6.py:21: error: Argument 3 to "wrap_function_wrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[def (*Never, **Never) -> Never, Any, tuple[Any, ...], dict[str, Any]], Never] | Callable[[type[Any], def (*Never, **Never) -> Never, Any, tuple[Any, ...], dict[str, Any]], Never] | Callable[[Any, def (*Never, **Never) -> Never, Any, tuple[Any, ...], dict[str, Any]], Never]"  [arg-type]
Found 2 errors in 1 file (checked 1 source file)
